--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,7 @@
 
 
 <!-- Displays top rated movies and photos -->
+{% if all %}
 <div class="container">
   <h1>Top rated movies</h1>
   <div class="row">
@@ -48,8 +49,10 @@
     {% endfor %}
   </div>
 </div>
+{% endif %}
 
 <!-- Displays most recent comments -->
+{% if comments %}
 <h1>Most recent comments</h1>
 {%for comment in comments%}
 <div class="card mb-3">
@@ -65,6 +68,7 @@
   </div>
 </div>
 {%endfor%}
+{% endif %}
 
 
 {% endblock %}
